sort.basic.bubble.AlgBubbleSort2.scala.error
Erreur de compilation :
AlgBubbleSort2:2: error: ')' expected but '<-' found.
def bubbleSort2() { for ((i<-getNombreValeurs()-2) to 0){
                           ^AlgBubbleSort2:2: error: '<-' expected but ')' found.
def bubbleSort2() { for ((i<-getNombreValeurs()-2) to 0){
                                                 ^AlgBubbleSort2:8: error: illegal start of simple expression
  } 
  ^